@@ -130,7 +130,7 @@ Parece que esos de toi estan mal definidos, dura unos 3 segundos mas
 
 
 
--Al dejar una ventana con items de menu, en background, se deberia quitar el color del item seleccionado. Si no, parece que esa ventana esta activa.
+ok probarlo mas-Al dejar una ventana con items de menu, en background, se deberia quitar el color del item seleccionado. Si no, parece que esa ventana esta activa.
 Ejemplo con AY Player
 
 
